--- a/chapter1.tex
+++ b/chapter1.tex
@@ -310,6 +310,34 @@
   Hence, $X$ is not second-countable.
 \end{proof}
 
+\begin{customprob}{1-7}
+  Let $N$ denote the \textbf{north pole} $(0, \cdots, 0, 1) \in S^n \subset \mathbb{R}^{n + 1}$, and let $S$ denote the \textbf{south pole} $(0, \cdots, 0, -1)$.
+  Define the \textbf{stereographic projection} $\sigma: S^n \setminus \{ N \} \rightarrow \mathbb{R}^n$ by
+  \begin{align*}
+    \sigma(x^1, \cdots, x^{n + 1}) = \frac{(x^1, \cdots, x^n)}{1 - x^{n + 1}}
+  \end{align*}
+  Let $\tilde{\sigma}(x) = -\sigma(-x)$ for $x \in S^n \setminus \{ S \}$.
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      For any $x \in S^n \setminus \{ N \}$, show that $\sigma(x) = u$, where $(u, 0)$ is the point where the line through $N$ and $x$ intersects the linear subspace where $x^{n + 1} = 0$.
+      Similarly, show that $\tilde{\sigma}(x)$ is the point where the line through $S$ and $x$ intersects the same subspace.
+    \item
+    \item
+    \item
+  \end{enumerate}
+\end{customprob}
+
+\begin{proof}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      This is trivial from basic trig using the triangles $N, (0, \cdots, 0, x^{n + 1}), (x^1, \cdots, x^{n + 1})$ and $N, (0, \cdots, 0), \sigma(x^1, \cdots, x^{n + 1})$.
+    \item
+    \item
+    \item
+  \end{enumerate}
+\end{proof}
+
 \begin{customprob}{1-12(Proof of Proposition 1.45)}
   Suppose $M_1, \cdots, M_k$ are smooth manifolds and $N$ is a smooth manifold with boundary.
   Then $M_1 \times \cdots \times M_k \times N$ is a smooth manifold with boundary, and $\partial (M_1 \times \cdots \times M_k \times N) = M_1 \times \cdots \times M_k \times \partial N$.
