--- a/chapter1.tex
+++ b/chapter1.tex
@@ -331,8 +331,9 @@
   $ $
   \begin{enumerate}[label=(\alph*)]
     \item 
-      This is trivial from basic trig using the triangles $N, (0, \cdots, 0, x^{n + 1}), (x^1, \cdots, x^{n + 1})$ and $N, (0, \cdots, 0), \sigma(x^1, \cdots, x^{n + 1})$.
+      This is trivial from a basic trigonometry argument using the triangles $N, (0, \cdots, 0, x^{n + 1}), (x^1, \cdots, x^{n + 1})$ and $N, (0, \cdots, 0), \sigma(x^1, \cdots, x^{n + 1})$.
     \item
+      $\sigma \circ \sigma^{-1}$ and $\sigma^{-1} \circ \sigma$ are both the identity maps, so $\sigma$ is bijective and $\sigma^{-1}$ is its inverse.
     \item
     \item
   \end{enumerate}
