--- a/chapter1.tex
+++ b/chapter1.tex
@@ -327,7 +327,7 @@
         \sigma^{-1}(u^1, \cdots, u^n) = \frac{(2u^1, \cdots, 2u^n, \abs{u}^2 - 1)}{\abs{u}^2 + 1}.
       \end{align*}
     \item
-      Compute the transition map $\tilde{\sigma} \circ \sigma^{-1}$ and verify that the atlas consisting of the two charts $(S^n \setminus \{ N \}, \sigma)$ and $(S^n \setminus \{ S \}, \hat{\sigma})$ defines a smooth structure on $S^n$.
+      Compute the transition map $\tilde{\sigma} \circ \sigma^{-1}$ and verify that the atlas consisting of the two charts $(S^n \setminus \{ N \}, \sigma)$ and $(S^n \setminus \{ S \}, \tilde{\sigma})$ defines a smooth structure on $S^n$.
     \item
       Show that this smooth structure is the same as the one defined in Example 1.31.
   \end{enumerate}
@@ -350,6 +350,8 @@
       As $\abs{u} \ne 0$ in the domain, this map is well-defined and clearly smooth.
       By Proposition 1.17(a), these two charts determine a unique smooth structure.
     \item
+      $\phi_i, \sigma, \tilde{\sigma}$ are all smooth functions of subsets of Euclidean spaces, so transition maps are always smooth.
+      By Proposition 1.17(b), the smooth structure determined by $\sigma, \tilde{\sigma}$ is the same as the one defined in Example 1.31.
   \end{enumerate}
 \end{proof}
 
