--- a/chapter2.tex
+++ b/chapter2.tex
@@ -385,3 +385,27 @@
       Other cases are similar, and thus $F$ is smooth by Proposition 2.5(b).
   \end{enumerate}
 \end{proof}
+
+\begin{customprob}{2-5}\label{problem_2_5}
+  Let $\mathbb{R}$ be the real line with its standard smooth structure, and let $\tilde{R}$ denote the same topological manifold with the smooth structure defined in Example 1.23.
+  Let $f: \mathbb{R} \rightarrow \mathbb{R}$ be a function that is smooth in the usual sense.
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      Show that $f$ is also smooth as a map from $\mathbb{R}$ to $\tilde{\mathbb{R}}$.
+    \item
+      Show that $f$ is smooth as a map from $\tilde{\mathbb{R}}$ to $\mathbb{R}$ if and only if $f^{(n)}(0) = 0$ whenever $n$ is not an integral multiple of 3.
+  \end{enumerate}
+\end{customprob}
+
+\begin{proof}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      The ``$\psi \circ f \circ \phi^{-1}$" is simply $f^3$, which is a smooth map from $\mathbb{R}$ to $\mathbb{R}$.
+      Thus $f: \tilde{\mathbb{R}} \rightarrow \mathbb{R}$ is smooth.
+    \item
+      \todo[inline,caption={}]{
+        Solve this!
+      }
+  \end{enumerate}
+\end{proof}
