Add the definition of a curve

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -187,3 +187,7 @@
       If $F$ has constant rank and $\rank F = \dim M$, $F$ is called a \textit{smooth immersion}.
   \end{itemize}
 \end{defn}
+
+\begin{defn}[Curve]
+  If $M$ is a manifold with or without boundary, we define a \textit{curve in $M$} to be a continuous map $\gamma: J \rightarrow M$ where $J \subset \mathbb{R}$ is an interval.
+\end{defn}
