--- a/chapter1.tex
+++ b/chapter1.tex
@@ -152,9 +152,12 @@
       Moreover, $\psi(\overline{B}) = \overline{B(0, r)}$ because $\psi$ is a homeomorphism.
   \end{itemize}
 
-  \todo[inline,caption={}]{
-    Work on the case when there is no chart that covers the entire manifold.
-  }
+  Now let $M$ be an arbitrary smooth $n$-manifold.
+  By definition, each point of $M$ is in the domain of a chart.
+  By Proposition A.16, $M$ is covered by countably many charts $\{ (U_i, \phi_i) \}$.
+  By the previous argument, each $U_i$ has a countable basis of regular coordinate balls.
+  Each regular coordinate ball in $U_i$ is indeed a regular coordinate ball in $M$ because $\overline{B}$ is a compact subset of $M$, which is Hausdorff, so $\overline{B}$ is closed.
+  In other words, the closure of $B$ in $U_i$ is the same as the closure of $B$ in $M$.
 \end{proof}
 
 \begin{customexer}{1.39}\label{exercise_1_39}
