--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -59,6 +59,7 @@
 \DeclareMathOperator{\RP}{\mathbb{R}\mathbb{P}}
 \DeclareMathOperator{\Int}{Int}
 \DeclareMathOperator{\bd}{bd}
+\DeclareMathOperator{\supp}{supp}
 
 \makeatletter
 \let\c@equation\c@thm
