Finish Problem B.49 & commit some minor changes that I forgot to commit

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -138,6 +138,14 @@
   The tangent space $T_pM$ to $M$ at $p$ is the vector space of all derivations of $C^{\infty}(M)$ at $p$.
 \end{defn}
 
+\begin{center}
+  \begin{tabular}{ | l | l | }
+    \hline
+    Derivation of $C^{\infty}(M)$ & Geometric tangent vector on $M$ \\ \hline
+    Differential of a smooth map between manifolds & Total derivative of a map between Euclidean spaces \\ \hline
+  \end{tabular}
+\end{center}
+
 \begin{defn}[Differential]
   $M, N$ are smooth manifolds with or without boundary, and $F: M \rightarrow N$ is a smooth map.
   The \textit{differential of $F$ at $p$} is the linear map $dF_p: T_pM \rightarrow T_{F(p)}N$ defined by 
