--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -91,6 +91,9 @@
 \section{Appendix A: Review of Topology}
 \input{appendix_a.tex}
 
+\section{Appendix B: Review of Linear Algebra}
+\input{appendix_b.tex}
+
 \section{Appendix C: Review of Calculus}
 \input{appendix_c.tex}
 
