--- a/chapter3.tex
+++ b/chapter3.tex
@@ -87,7 +87,7 @@
 \begin{proof}
   Suppose $dF_p: T_pM \rightarrow T_{F(p)}N$ is the zero map for each $p \in M$.
   It suffices to show that for every $p \in M$, there exists a neighborhood of $p$ on which $F$ is constant.
-  Let $p \in M$ and $(U, \phi) \in \mathcal{A}_M, (V, \psi) \i \mathcal{A}_N$ be given such that $p \in U$ and $F(U) \subset V$.
+  Let $p \in M$ and $(U, \phi) \in \mathcal{A}_M, (V, \psi) \in \mathcal{A}_N$ be given such that $p \in U$ and $F(U) \subset V$.
   Without loss of generality, we assume $\hat{U} = \phi(U)$ is an open ball in $\mathbb{R}^m$.
   Then for any $i, j$ and for any $q \in \hat{U}$,
   \begin{align*}
