--- a/chapter3.tex
+++ b/chapter3.tex
@@ -14,10 +14,8 @@
   \begin{enumerate}[label=(\alph*)]
     \item
       Let $h$ be the constant function that always takes the value 1.
-      Then $f(p) = ch(p)$ for some $c \in \mathbb{R}$.
-      Then $v(ff) = f(p)vf + f(p)vf$, so $c^2v(h) = c^2v(h) + c^2v(h)$.
-      Therefore, $c^2v(h) = 0$, so $cv(h) = 0$.
-      Since $v$ is linear, this implies $0 = v(ch) = v(f)$, so $v(f) = 0$.
+      Then $v(h) = v(h^2) = h(p)v(h) + h(p)v(h) = 2v(h)$, so $v(h) = 0$.
+      Since $f(p) = ch(p)$ for some $c \in \mathbb{R}$ and $v$ is linear, this implies $0 = cv(h) = v(ch) = v(f)$.
     \item
       $v(fg) = f(p)vg + g(p)vf = 0 + 0 = 0$.
   \end{enumerate}
