Add a note to ex 3.5

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -10,7 +10,7 @@
 \end{customexer}
 
 \begin{proof}
-  $ $
+  This is similar to Lemma 3.1.
   \begin{enumerate}[label=(\alph*)]
     \item
       Let $h$ be the constant function that always takes the value 1.
