Add the definition of a smooth on A

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -120,6 +120,11 @@
   A diffeomorphism is a smooth map $F: M \rightarrow N$ with a smooth inverse.
 \end{defn}
 
+\begin{defn}[Smooth on a subset]
+  Let $M, N$ be smooth manifolds with or without boundary and $A \subset M$ be an arbitrary subset.
+  A map $F: A \rightarrow N$ is said to be \textit{smooth on $A$} if every $p \in A$ has an open neighborhood $W \subset M$ such that there exists a smooth map $\tilde{F}:W \rightarrow N$ with $\tilde{F}_{W \cap A} = F$.
+\end{defn} 
+
 \subsection{Tangent Vectors}
 
 \begin{defn}[Derivation]
