--- a/chapter2.tex
+++ b/chapter2.tex
@@ -266,6 +266,15 @@
   By (\ref{exercise_1_44}(c)) and (\ref{exercise_2_16}(d)), $F$ is a diffeomorphism between $\Int M$ and $\Int N$.
 \end{proof}
 
+\begin{customprob}{2-27}
+  Give a counterexample to show that the conclusion of the extension lemma can be false if $A$ is not closed.
+\end{customprob}
+
+\begin{proof}
+  Let $M = \mathbb{R}, A = (0, 1), f(x) = 1 / x$.
+  Then $f$ is smooth on $A$, but $\lim_{x \rightarrow 0} f = \infty$, so $f$ cannot be extended continuously.
+\end{proof}
+
 \subsection{Problems}
 
 \begin{customprob}{2-1}
