--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -44,6 +44,11 @@
   {\renewcommand\theinnercustomprob{#1}\innercustomprob}
   {\endinnercustomprob}
 
+\newtheorem{innercustomthm}{Proposition}
+\newenvironment{customthm}[1]
+  {\renewcommand\theinnercustomthm{#1}\innercustomthm}
+  {\endinnercustomthm}
+
 \theoremstyle{remark}
 \newtheorem{rem}[thm]{Remark}
 \newtheorem{rems}[thm]{Remarks}
