Add some more stuff to the remark

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -170,6 +170,7 @@
 \end{proof}
 
 \begin{rem}
+  This remark is about the discussion on PP.61-62.
   Let $F: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be a smooth map and let $p \in \mathbb{R}^n$ be given.
   \begin{align*}
     dF_p(\frac{\partial}{\partial x^i}\Big\vert_p)(f) 
@@ -192,7 +193,13 @@
   \end{align*}
 
   which is identical to the Jacobian matrix of $F$ at $p$.
-  (Note that it makes sense to discussion the Jacobian matrix of $F$ because $F$ is a map from $\mathbb{R}^m$ to $\mathbb{R}^n$.)
+  Two things to note:
+  \begin{itemize}
+    \item
+      It makes sense to discuss the Jacobian matrix of $F$ because $F$ is a map from $\mathbb{R}^m$ to $\mathbb{R}^n$.
+    \item
+      The same calculation applies if $F: U \rightarrow V$ where $U, V$ are open subsets of $\mathbb{R}^n, \mathbb{R}^m$ or where $U, V$ are open subsets of $\mathbb{H}^n, \mathbb{H}^m$.
+  \end{itemize}
 \end{rem}
 
 \subsection{Problems}
