--- a/chapter3.tex
+++ b/chapter3.tex
@@ -172,14 +172,14 @@
 \begin{rem}
   This remark is about the discussion on PP.61-62.
   Let $F: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be a smooth map and let $p \in \mathbb{R}^n$ be given.
-  \begin{align*}
+  \begin{align}
     dF_p(\frac{\partial}{\partial x^i}\Big\vert_p)(f) 
       &= \frac{\partial}{\partial x^i}\Big\vert_p(f \circ F) & \text{(definition of $d$)} \\
       &= \frac{\partial (f \circ F)}{\partial x^i}(p) & \text{(Just a partial derivative of $f \circ F$)} \\
       &= \sum_{j=1}^{m} \frac{\partial f}{\partial y^j}(F(p))\frac{\partial F^j}{\partial x^i}(p) \\
       &= \sum_{j=1}^{m} \frac{\partial F^j}{\partial x^i}(p)\frac{\partial f}{\partial y^j}(F(p)) & \text{(Multiplication is commutative in $\mathbb{R}$)} \\
       &= \sum_{j=1}^{m} \frac{\partial F^j}{\partial x^i}(p)\frac{\partial}{\partial y^j}\Big\vert_{F(p)}(f).
-  \end{align*}
+  \end{align}
   Therefore, we obtain that $dF_p(\frac{\partial}{\partial x^i}\big\vert_p) = \sum_{j=1}^{m} \frac{\partial F^j}{\partial x^i}(p)\frac{\partial}{\partial y^j}\big\vert_{F(p)}$.
   $\{ \partial / \partial x^i \}$ and $\{ \partial / \partial y^j \}$ form bases for $T_p\mathbb{R}^n$ and $T_{F(p)}\mathbb{R}^m$, respectively, so it makes sense to put $dF_p$ is a matrix form.
   Then we obtain
@@ -200,6 +200,35 @@
     \item
       The same calculation applies if $F: U \rightarrow V$ where $U, V$ are open subsets of $\mathbb{R}^n, \mathbb{R}^m$ or where $U, V$ are open subsets of $\mathbb{H}^n, \mathbb{H}^m$.
   \end{itemize}
+
+  We now consider a more general case when $F: M \rightarrow N$ is a smooth map between two smooth manifolds with or without boundary.
+  Let $p \in M$ be given.
+  Let $(U, \phi), (V, \psi)$ be smooth charts of $M, N$ that contain $p, F(p)$, respectively.
+  Let $\hat{F} = \psi \circ F \circ \phi^{-1}: \phi(U \cap F^{-1}(V)) \rightarrow \psi(V)$ and $\hat{p} = \phi(p)$.
+  Then we obtain the following commutative diagram:
+
+  \begin{center}
+    \begin{tikzcd}[cells={nodes={minimum height=2em}}]
+      U \cap F^{-1}(V) \arrow[r, "F"] \arrow[d, "\phi"]   & F \arrow[d, "\psi"] \\
+      \phi(U \cap F^{-1}(V)) \arrow[r, "\hat{F}"]         & \hat{V}
+    \end{tikzcd}
+  \end{center}
+
+  We compute
+  \begin{align*}
+    dF_p(\frac{\partial}{\partial x^i}\Big\vert_p)
+      &= dF_p(d(\phi^{-1})_{\hat{p}}(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}})) & \text{(Definition of a coordinate vector)} \\
+      &= (dF_p \circ d(\phi^{-1})_{\hat{p}})(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}}) \\
+      &= (d(F \circ \phi^{-1})_{\hat{p}})(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}}) & (\ref{proof_prop_3_6}) \\
+      &= d(\psi^{-1} \circ \hat{F})_{\hat{p}}(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}}) & \text{(See the diagram above)} \\
+      &= (d(\psi^{-1})_{\hat{F}(\hat{p})} \circ d\hat{F}_{\hat{p}})(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}}) & (\ref{proof_prop_3_6}) \\
+      &= d(\psi^{-1})_{\hat{F}(\hat{p})}(d\hat{F}_{\hat{p}}(\frac{\partial}{\partial x^i}\Big\vert_{\hat{p}})) \\
+      &= d(\psi^{-1})_{\hat{F}(\hat{p})}(\sum_{j=1}^{m} \frac{\partial \hat{F}^j}{\partial x^i}(\hat{p})\frac{\partial}{\partial y^j}\Big\vert_{\hat{F}(\hat{p})}) & (\text{Discussion above})\\
+      &= \sum_{j=1}^{m} \frac{\partial \hat{F}^j}{\partial x^i}(\hat{p}) d(\psi^{-1})_{\hat{F}(\hat{p})}(\frac{\partial}{\partial y^j}\Big\vert_{\hat{F}(\hat{p})}) & (\text{Linearity of a differential})\\
+      &= \sum_{j=1}^{m} \frac{\partial \hat{F}^j}{\partial x^i}(\hat{p}) d(\psi^{-1})_{\psi(F(p))}(\frac{\partial}{\partial y^j}\Big\vert_{\psi(F(p))}) & (\text{Diagram above})\\
+      &= \sum_{j=1}^{m} \frac{\partial \hat{F}^j}{\partial x^i}(\hat{p}) \frac{\partial}{\partial y^i} \Big\vert_{F(p)} & (\text{Definition of a coordinate vector}).
+  \end{align*}
+  Therefore, even in this general case, $dF_p$ is represented in coordinate bases by the Jacobian matrix of $\hat{F}$.
 \end{rem}
 
 \subsection{Problems}
