Update the comment in the remark (differentials = Jacobian)

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -170,7 +170,7 @@
 \end{proof}
 
 \begin{rem}
-  This remark is about the discussion on PP.61-62.
+  The discussion on PP.61-62 shows the connection between differentials and Jacobian matrices.
   Let $F: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be a smooth map and let $p \in \mathbb{R}^n$ be given.
   \begin{align}
     dF_p(\frac{\partial}{\partial x^i}\Big\vert_p)(f) 
