Add some more stuff

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -232,7 +232,7 @@
 \end{rem}
 
 \begin{rem}
-  The notation on P.63 is not easy to understand.
+  The notation on P.63-64 is not easy to understand.
 
   Let $(U, \phi = (x^i)), (V, \psi = (\tilde{x}^i))$ be two smooth charts on $M$ and $p \in U \cap V$.
   The textbook denotes the transition map $\psi \circ \phi^{-1}: \phi(U \cap v) \rightarrow \psi(U \cap V)$ by
@@ -245,6 +245,8 @@
   \end{align*}
   for each $p \in U \cap V$.
   The idea is that $\phi = (x^i)$ is a diffeomorphism, so the textbook decides to denote each point in $\phi(U \cap V)$ by $x$ because every point in $\phi(U \cap V)$ can be denoted by $(x^1(p), \cdots, x^n(p))$ for a unique $p \in U \cap V$.
+
+  Moreover, the second part of this discussion (after ``By (3.9), the differential $d(\psi \circ \phi^{-1})_{\phi(p)}$ can be written") is even more confusing because the textbook simply uses $x^i$ and $\tilde{x}^i$ to represent the coordinates of $\hat{U}$ and $\hat{V}$ instead of the coordinate functions of $\phi$ and $\psi$.
 \end{rem}
 
 \subsection{Problems}
