Add some more stuff

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -234,6 +234,7 @@
 \begin{rem}
   The notation on P.63-64 is not easy to understand.
 
+  Let $M$ be an $n$-dimensional smooth manifold.
   Let $(U, \phi = (x^i)), (V, \psi = (\tilde{x}^i))$ be two smooth charts on $M$ and $p \in U \cap V$.
   The textbook denotes the transition map $\psi \circ \phi^{-1}: \phi(U \cap v) \rightarrow \psi(U \cap V)$ by
   \begin{align*}
@@ -246,7 +247,14 @@
   for each $p \in U \cap V$.
   The idea is that $\phi = (x^i)$ is a diffeomorphism, so the textbook decides to denote each point in $\phi(U \cap V)$ by $x$ because every point in $\phi(U \cap V)$ can be denoted by $(x^1(p), \cdots, x^n(p))$ for a unique $p \in U \cap V$.
 
-  Moreover, the second part of this discussion (after ``By (3.9), the differential $d(\psi \circ \phi^{-1})_{\phi(p)}$ can be written") is even more confusing because the textbook simply uses $x^i$ and $\tilde{x}^i$ to represent the coordinates of $\hat{U}$ and $\hat{V}$ instead of the coordinate functions of $\phi$ and $\psi$.
+  Moreover, the second part of this discussion (after ``By (3.9), the differential $d(\psi \circ \phi^{-1})_{\phi(p)}$ can be written") is even more confusing because:
+  \begin{itemize}
+    \item
+      The textbook simply uses $x^i$ and $\tilde{x}^i$ to represent the coordinates of $\hat{U}$ and $\hat{V}$ instead of the coordinate functions of $\phi$ and $\psi$.
+    \item
+      $\hat{U}$ and $\hat{V}$ both live in $\mathbb{R}^n$, so it might seem unnecessary to use both $x^i$ and $\tilde{x}^i$.
+      It is actually necessary because we want to use $\partial / \partial x^i$ to talk about the coordinate vectors induced by $\phi$ and $\partial / \partial \tilde{x}^i$ to talk about the coordinate vectors induced by $\psi$.
+  \end{itemize}
 \end{rem}
 
 \subsection{Problems}
